# project-2_Staroverov_M-25-555

./: .gitignore  Makefile  README.md  db_meta.json  final.cast  one.cast  pyproject.toml
data/: users.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  utils.py
